Formatting fixes, container wasn't overflow hidden

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -77,6 +77,7 @@ footer {
 .logo-container {
   position: relative;
   display: inline-block;
+  overflow: hidden;
 }
 
 .logo-text-overlay {
@@ -84,19 +85,19 @@ footer {
   font-weight: 500;
   position: absolute;
   width: 100%;
-  top: 85%;
+  top: 86%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
   font-size: 2.4rem;
   pointer-events: none;
-  text-shadow: 4px 4px 4px black;
+  text-shadow: 2px 2px 2px black;
   padding: 6px 12px;
   background-color: rgba(0, 0, 0, 0.3); /* semi-transparent dark background */
-  backdrop-filter: blur(6px);
+  backdrop-filter: blur(12px);
   -webkit-backdrop-filter: blur(6px); /* for Safari */
-  border: 1.5px solid white;
-  border-radius: 14px;
+  border: 1.5px solid gray;
+  border-radius: 11px;
   max-width: 75%;
   text-align: center;
   white-space: nowrap;
